// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ToggleRenderer — T-0003-096: snapshot Toggle on + label snapshot: Toggle on (value=true) with label 1`] = `
<View
  style={
    {
      "alignItems": "center",
      "flexDirection": "row",
      "minHeight": 56,
      "width": "100%",
    }
  }
>
  <Text
    style={
      [
        {
          "fontSize": 16,
          "fontWeight": "400",
        },
        {
          "color": "#0a0a0b",
          "flex": 1,
        },
      ]
    }
  >
    Dark Mode
  </Text>
  <RCTSwitch
    accessibilityLabel="Dark Mode"
    accessibilityRole="switch"
    onChange={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    onTintColor="#4f46e5"
    style={
      {
        "height": 31,
        "width": 51,
      }
    }
    tintColor="#c7ccd1"
    value={true}
  />
</View>
`;

exports[`ToggleRenderer — T-0003-097: snapshot Toggle off + label snapshot: Toggle off (value=false) with label 1`] = `
<View
  style={
    {
      "alignItems": "center",
      "flexDirection": "row",
      "minHeight": 56,
      "width": "100%",
    }
  }
>
  <Text
    style={
      [
        {
          "fontSize": 16,
          "fontWeight": "400",
        },
        {
          "color": "#0a0a0b",
          "flex": 1,
        },
      ]
    }
  >
    Dark Mode
  </Text>
  <RCTSwitch
    accessibilityLabel="Dark Mode"
    accessibilityRole="switch"
    onChange={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    onTintColor="#4f46e5"
    style={
      {
        "height": 31,
        "width": 51,
      }
    }
    tintColor="#c7ccd1"
    value={false}
  />
</View>
`;
